--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="herader">
+        <nav class="header__nav">
+            <h1>sdscds</h1>
+            <div class="header__content">
+                <h1>dfjdvd</h1>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
